add vibrationEnabled setting across client session sync, API models, and player schema